After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 743593 - GtkWidget's va_marshaller for "event-after" signal is incorrect
GtkWidget's va_marshaller for "event-after" signal is incorrect
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2015-01-27 17:22 UTC by Garrett Regier
Modified: 2015-01-28 21:43 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix VA marshaller for GtkWidget's "event-after" signal (975 bytes, patch)
2015-01-27 17:22 UTC, Garrett Regier
committed Details | Review

Description Garrett Regier 2015-01-27 17:22:19 UTC
Just a copy and paste typo from the "event" signal.
Comment 1 Garrett Regier 2015-01-27 17:22:49 UTC
Created attachment 295557 [details] [review]
Fix VA marshaller for GtkWidget's "event-after" signal

Just a copy and paste typo from the "event" signal.
Comment 2 Matthias Clasen 2015-01-28 21:43:45 UTC
Attachment 295557 [details] pushed as 9cbf764 - Fix VA marshaller for GtkWidget's "event-after" signal